// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> Snapshots should match snapshot 1`] = `
.c11 {
  background-color: #c3c7cb;
  padding: 7px 20px 5px;
  border: none;
  font-size: 12px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 0px #000000;
}

.c11:disabled {
  color: #868a8e;
}

.c11:focus {
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -0.5px -0.5px 0px 1px #868a8e, 1px 1px 0 1px #000000;
}

.c11:active {
  padding: 8px 20px 4px;
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 0 0 0 1px #868a8e, 0 0 0 1px #000000;
}

.c2 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 15px;
  height: 13px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2px 2px 8px;
  top: 50px;
  background-color: #c3c7cb;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 1px #000000;
  width: auto;
  height: auto;
  z-index: 1;
}

.c1 {
  height: 18px;
  margin-bottom: 2px;
  color: #ffffff;
  padding: 2px 2px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #000e7a;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
}

.c4 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  background-color: #c3c7cb;
  padding: 7px 20px 5px;
  border: none;
  font-size: 12px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 0px #000000;
  margin-right: 2px;
  padding: 0;
  width: 17px;
  height: 14px;
  min-width: 0;
  font-size: 10px;
}

.c6:disabled {
  color: #868a8e;
}

.c6:focus {
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -0.5px -0.5px 0px 1px #868a8e, 1px 1px 0 1px #000000;
}

.c6:active {
  padding: 8px 20px 4px;
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 0 0 0 1px #868a8e, 0 0 0 1px #000000;
}

.c6:last-child {
  margin-right: 0;
}

.c6:active {
  padding: 1px 0 0 1px;
  outline: none;
}

.c6:focus {
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -1px -1px 0px 1px #868a8e;
}

.c9 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 6px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 0 6px 6px 6px;
}

.c10 .c5 {
  margin-right: 6px;
  min-width: 70px;
}

.c10 .c5:last-child {
  margin-right: 0;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  list-style: none;
  margin: 0;
  padding-left: 0;
  padding-bottom: 3px;
  border-bottom-style: solid;
  border-width: 1px;
  border-bottom-color: #868a8e;
  box-shadow: 0 1px 0 0 #e6e6e6;
}

.c8 {
  position: relative;
  padding-left: 6px;
  padding-right: 6px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c8 ul {
  position: absolute;
  left: 0;
  color: #000000;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="c1 draggable"
    >
      <i
        class="c2"
        height="13"
        name="bat"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="15"
      />
      <div
        class="c3"
      >
        file.bat
      </div>
      <ul
        class="c4"
      >
        <button
          class="c5 c6"
        >
          ?
        </button>
        <button
          class="c5 c6"
        >
          x
        </button>
      </ul>
    </div>
    <ul
      class="c7"
    >
      <li
        class="c8"
      >
        File
      </li>
      <li
        class="c8"
      >
        Edit
      </li>
    </ul>
    <div
      class="c9"
    >
      Hello
    </div>
    <div
      class="c10"
    >
      <button
        class="c5 c11"
        value="Ok"
      >
        Ok
      </button>
      <button
        class="c5 c11"
        value="Cancel"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`<Modal /> Snapshots should match snapshot with buttonsAligment prop equals center 1`] = `
.c9 {
  background-color: #c3c7cb;
  padding: 7px 20px 5px;
  border: none;
  font-size: 12px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 0px #000000;
}

.c9:disabled {
  color: #868a8e;
}

.c9:focus {
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -0.5px -0.5px 0px 1px #868a8e, 1px 1px 0 1px #000000;
}

.c9:active {
  padding: 8px 20px 4px;
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 0 0 0 1px #868a8e, 0 0 0 1px #000000;
}

.c2 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 15px;
  height: 13px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2px 2px 8px;
  top: 50px;
  background-color: #c3c7cb;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 1px #000000;
  width: auto;
  height: auto;
  z-index: 1;
}

.c1 {
  height: 18px;
  margin-bottom: 2px;
  color: #ffffff;
  padding: 2px 2px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #000e7a;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
}

.c4 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  background-color: #c3c7cb;
  padding: 7px 20px 5px;
  border: none;
  font-size: 12px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 0px #000000;
  margin-right: 2px;
  padding: 0;
  width: 17px;
  height: 14px;
  min-width: 0;
  font-size: 10px;
}

.c6:disabled {
  color: #868a8e;
}

.c6:focus {
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -0.5px -0.5px 0px 1px #868a8e, 1px 1px 0 1px #000000;
}

.c6:active {
  padding: 8px 20px 4px;
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 0 0 0 1px #868a8e, 0 0 0 1px #000000;
}

.c6:last-child {
  margin-right: 0;
}

.c6:active {
  padding: 1px 0 0 1px;
  outline: none;
}

.c6:focus {
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -1px -1px 0px 1px #868a8e;
}

.c7 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 6px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 6px 6px 6px;
}

.c8 .c5 {
  margin-right: 6px;
  min-width: 70px;
}

.c8 .c5:last-child {
  margin-right: 0;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="c1 draggable"
    >
      <i
        class="c2"
        height="13"
        name="bat"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="15"
      />
      <div
        class="c3"
      >
        file.bat
      </div>
      <ul
        class="c4"
      >
        <button
          class="c5 c6"
        >
          ?
        </button>
        <button
          class="c5 c6"
        >
          x
        </button>
      </ul>
    </div>
    <div
      class="c7"
    >
      Hello
    </div>
    <div
      class="c8"
    >
      <button
        class="c5 c9"
        value="Ok"
      >
        Ok
      </button>
      <button
        class="c5 c9"
        value="Cancel"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`<Modal /> Snapshots should match snapshot with buttonsAligment prop equals flex-start 1`] = `
.c9 {
  background-color: #c3c7cb;
  padding: 7px 20px 5px;
  border: none;
  font-size: 12px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 0px #000000;
}

.c9:disabled {
  color: #868a8e;
}

.c9:focus {
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -0.5px -0.5px 0px 1px #868a8e, 1px 1px 0 1px #000000;
}

.c9:active {
  padding: 8px 20px 4px;
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 0 0 0 1px #868a8e, 0 0 0 1px #000000;
}

.c2 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 15px;
  height: 13px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2px 2px 8px;
  top: 50px;
  background-color: #c3c7cb;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 1px #000000;
  width: auto;
  height: auto;
  z-index: 1;
}

.c1 {
  height: 18px;
  margin-bottom: 2px;
  color: #ffffff;
  padding: 2px 2px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #000e7a;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
}

.c4 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 {
  background-color: #c3c7cb;
  padding: 7px 20px 5px;
  border: none;
  font-size: 12px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 0px #000000;
  margin-right: 2px;
  padding: 0;
  width: 17px;
  height: 14px;
  min-width: 0;
  font-size: 10px;
}

.c6:disabled {
  color: #868a8e;
}

.c6:focus {
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -0.5px -0.5px 0px 1px #868a8e, 1px 1px 0 1px #000000;
}

.c6:active {
  padding: 8px 20px 4px;
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 0 0 0 1px #868a8e, 0 0 0 1px #000000;
}

.c6:last-child {
  margin-right: 0;
}

.c6:active {
  padding: 1px 0 0 1px;
  outline: none;
}

.c6:focus {
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -1px -1px 0px 1px #868a8e;
}

.c7 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 6px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0 6px 6px 6px;
}

.c8 .c5 {
  margin-right: 6px;
  min-width: 70px;
}

.c8 .c5:last-child {
  margin-right: 0;
}

<div>
  <div
    class="c0 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="c1 draggable"
    >
      <i
        class="c2"
        height="13"
        name="bat"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="15"
      />
      <div
        class="c3"
      >
        file.bat
      </div>
      <ul
        class="c4"
      >
        <button
          class="c5 c6"
        >
          ?
        </button>
        <button
          class="c5 c6"
        >
          x
        </button>
      </ul>
    </div>
    <div
      class="c7"
    >
      Hello
    </div>
    <div
      class="c8"
    >
      <button
        class="c5 c9"
        value="Ok"
      >
        Ok
      </button>
      <button
        class="c5 c9"
        value="Cancel"
      >
        Cancel
      </button>
    </div>
  </div>
</div>
`;

exports[`<Modal /> Snapshots should match snapshot with different activeWindow 1`] = `
.c2 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 15px;
  height: 13px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2px 2px 8px;
  top: 50px;
  background-color: #c3c7cb;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 1px #000000;
  width: 300px;
  height: 200px;
}

.c1 {
  height: 18px;
  margin-bottom: 2px;
  color: #ffffff;
  padding: 2px 2px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #868a8e;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
}

.c4 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  background-color: #c3c7cb;
  padding: 7px 20px 5px;
  border: none;
  font-size: 12px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 0px #000000;
  margin-right: 2px;
  padding: 0;
  width: 17px;
  height: 14px;
  min-width: 0;
  font-size: 10px;
}

.c5:disabled {
  color: #868a8e;
}

.c5:focus {
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -0.5px -0.5px 0px 1px #868a8e, 1px 1px 0 1px #000000;
}

.c5:active {
  padding: 8px 20px 4px;
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 0 0 0 1px #868a8e, 0 0 0 1px #000000;
}

.c5:last-child {
  margin-right: 0;
}

.c5:active {
  padding: 1px 0 0 1px;
  outline: none;
}

.c5:focus {
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -1px -1px 0px 1px #868a8e;
}

.c6 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 6px;
}

<div>
  <div
    class="c0 react-draggable"
    height="200"
    style="transform: translate(0px,0px);"
    width="300"
  >
    <div
      class="c1 draggable"
    >
      <i
        class="c2"
        height="13"
        name="bat"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="15"
      />
      <div
        class="c3"
      >
        file.bat
      </div>
      <ul
        class="c4"
      >
        <button
          class="sc-pscky c5"
        >
          ?
        </button>
        <button
          class="sc-pscky c5"
        >
          x
        </button>
      </ul>
    </div>
    <div
      class="c6"
    >
      Hello
    </div>
  </div>
</div>
`;

exports[`<Modal /> Snapshots should match snapshot with width and height props 1`] = `
.c2 {
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  width: 15px;
  height: 13px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: fixed;
  padding: 2px 2px 8px;
  top: 50px;
  background-color: #c3c7cb;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 1px #000000;
  width: 300px;
  height: 200px;
  z-index: 1;
}

.c1 {
  height: 18px;
  margin-bottom: 2px;
  color: #ffffff;
  padding: 2px 2px 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #000e7a;
}

.c3 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: bold;
}

.c4 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  background-color: #c3c7cb;
  padding: 7px 20px 5px;
  border: none;
  font-size: 12px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset 0 0 0 1px #868a8e,1px 1px 0 0px #000000;
  margin-right: 2px;
  padding: 0;
  width: 17px;
  height: 14px;
  min-width: 0;
  font-size: 10px;
}

.c5:disabled {
  color: #868a8e;
}

.c5:focus {
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -0.5px -0.5px 0px 1px #868a8e, 1px 1px 0 1px #000000;
}

.c5:active {
  padding: 8px 20px 4px;
  outline: 1px dotted #000000;
  outline-offset: -5px;
  box-shadow: inset 0 0 0 1px #868a8e, 0 0 0 1px #000000;
}

.c5:last-child {
  margin-right: 0;
}

.c5:active {
  padding: 1px 0 0 1px;
  outline: none;
}

.c5:focus {
  box-shadow: inset 1px 1px 0px 1px #ffffff, inset -1px -1px 0px 1px #868a8e;
}

.c6 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 6px;
}

<div>
  <div
    class="c0 react-draggable"
    height="200"
    style="transform: translate(0px,0px);"
    width="300"
  >
    <div
      class="c1 draggable"
    >
      <i
        class="c2"
        height="13"
        name="bat"
        style="margin-right: 4px; background-image: url(buffer-32-4-1);"
        width="15"
      />
      <div
        class="c3"
      >
        file.bat
      </div>
      <ul
        class="c4"
      >
        <button
          class="sc-pscky c5"
        >
          ?
        </button>
        <button
          class="sc-pscky c5"
        >
          x
        </button>
      </ul>
    </div>
    <div
      class="c6"
    >
      Hello
    </div>
  </div>
</div>
`;
